--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ install:
   - chmod a+x $HOME/purescript
   - npm install -g bower
   - npm install
-  - bower install
+  - bower install --prod
 script:
   - npm run -s build
+  - bower install
   - npm run -s test
 after_success:
 - >-
