--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,11 @@
   ],
   "dependencies": {
     "purescript-prelude": "^3.0.0",
-    "purescript-eff": "^3.1.0",
+    "purescript-eff": "^3.1.0"
+  },
+  "devDependencies": {
     "purescript-foldable-traversable": "^3.6.1",
-    "purescript-minibench": "safareli/purescript-minibench#un-log"
+    "purescript-minibench": "safareli/purescript-minibench#un-log",
+    "purescript-aff": "^4.0.1"
   }
 }
