--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bench:build": "purs compile 'bench/**/*.purs' 'src/**/*.purs' 'bower_components/*/src/**/*.purs'",
     "bench:run": "node --expose-gc -e 'require(\"./output/Bench.Main/index.js\").main()'",
     "bench:run:extended": "node --expose-gc -e 'require(\"./output/Bench.Main/index.js\").extended()'",
+    "bench:all": "npm run bench:build && npm run bench:run && npm run bench:run:extended",
     "bench": "npm run bench:build && npm run bench:run"
   },
   "devDependencies": {
